# 10x15cm-Photo-Formatter

./: 10x15_Photo_Formatter.py  README.md  photo_formatter.py  pyproject.toml
